--- a/slider/index.html
+++ b/slider/index.html
@@ -16,13 +16,76 @@
 
 <body>
 	<div class="owl-carousel owl-theme">
-		<div class="item"><img src="imgs/img_1.jpg" alt=""></div>
-		<div class="item"><img src="imgs/img_2.jpg" alt=""></div>
-		<div class="item"><img src="imgs/img_3.jpg" alt=""></div>
-		<div class="item"><img src="imgs/img_4.jpg" alt=""></div>
-		<div class="item"><img src="imgs/img_5.jpg" alt=""></div>
-		<div class="item"><img src="imgs/img_3.jpg" alt=""></div>
-		<div class="item"><img src="imgs/img_4.jpg" alt=""></div>
+		<div class="item">
+			<div style="display: block; position: relative;">
+				<img src="imgs/img_1.jpg" alt="">
+				<div class="item_content">
+					<center>
+						<span>SLIDE 1</span>
+					</center>
+				</div>
+			</div>
+		</div>
+		<div class="item">
+			<div style="display: block; position: relative;">
+				<img src="imgs/img_2.jpg" alt="">
+				<div class="item_content">
+					<center>
+						<span>SLIDE 2</span>
+					</center>
+				</div>
+			</div>
+		</div>
+		<div class="item">
+			<div style="display: block; position: relative;">
+				<img src="imgs/img_3.jpg" alt="">
+				<div class="item_content">
+					<center>
+						<span>SLIDE 3</span>
+					</center>
+				</div>
+			</div>
+		</div>
+		<div class="item">
+			<div style="display: block; position: relative;">
+				<img src="imgs/img_4.jpg" alt="">
+				<div class="item_content">
+					<center>
+						<span>SLIDE 4</span>
+					</center>
+				</div>
+			</div>
+		</div>
+		<div class="item">
+			<div style="display: block; position: relative;">
+				<img src="imgs/img_5.jpg" alt="">
+				<div class="item_content">
+					<center>
+						<span>SLIDE 5</span>
+					</center>
+				</div>
+			</div>
+		</div>
+		<div class="item">
+			<div style="display: block; position: relative;">
+				<img src="imgs/img_4.jpg" alt="">
+				<div class="item_content">
+					<center>
+						<span>SLIDE 6</span>
+					</center>
+				</div>
+			</div>
+		</div>
+		<div class="item">
+			<div style="display: block; position: relative;">
+				<img src="imgs/img_3.jpg" alt="">
+				<div class="item_content">
+					<center>
+						<span>SLIDE 7</span>
+					</center>
+				</div>
+			</div>
+		</div>
 	</div>
 	<script type="text/javascript" src="jquery-1.12.4.min.js"></script>
 	<script type="text/javascript" src="owl.carousel.js"></script>
@@ -52,6 +115,14 @@
 			});
 		});
 	</script>
+	<style>
+	.owl-item .item .item_content {
+		position: absolute;
+		top: 0;
+		width: 100%;
+		height: 100%;
+	}
+	</style>
 </body>
 
 </html>
