--- a/slider/index.html
+++ b/slider/index.html
@@ -11,7 +11,7 @@
 	<!-- Owl Stylesheets -->
 	<link rel="stylesheet" href="owl.carousel.min.css">
 	<link rel="stylesheet" href="owl.theme.default.min.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="owl.custom.css">
 </head>
 
 <body>
@@ -20,6 +20,7 @@
 			<div style="display: block; position: relative;">
 				<img src="imgs/img_1.jpg" alt="">
 				<div class="item_content">
+					<!-- CONTENT AREA -->
 					<center>
 						<span>SLIDE 1</span>
 					</center>
@@ -30,6 +31,7 @@
 			<div style="display: block; position: relative;">
 				<img src="imgs/img_2.jpg" alt="">
 				<div class="item_content">
+					<!-- CONTENT AREA -->
 					<center>
 						<span>SLIDE 2</span>
 					</center>
@@ -40,6 +42,7 @@
 			<div style="display: block; position: relative;">
 				<img src="imgs/img_3.jpg" alt="">
 				<div class="item_content">
+					<!-- CONTENT AREA -->
 					<center>
 						<span>SLIDE 3</span>
 					</center>
@@ -50,6 +53,7 @@
 			<div style="display: block; position: relative;">
 				<img src="imgs/img_4.jpg" alt="">
 				<div class="item_content">
+					<!-- CONTENT AREA -->
 					<center>
 						<span>SLIDE 4</span>
 					</center>
@@ -60,6 +64,7 @@
 			<div style="display: block; position: relative;">
 				<img src="imgs/img_5.jpg" alt="">
 				<div class="item_content">
+					<!-- CONTENT AREA -->
 					<center>
 						<span>SLIDE 5</span>
 					</center>
@@ -70,6 +75,7 @@
 			<div style="display: block; position: relative;">
 				<img src="imgs/img_4.jpg" alt="">
 				<div class="item_content">
+					<!-- CONTENT AREA -->
 					<center>
 						<span>SLIDE 6</span>
 					</center>
@@ -80,6 +86,7 @@
 			<div style="display: block; position: relative;">
 				<img src="imgs/img_3.jpg" alt="">
 				<div class="item_content">
+					<!-- CONTENT AREA -->
 					<center>
 						<span>SLIDE 7</span>
 					</center>
@@ -88,7 +95,7 @@
 		</div>
 	</div>
 	<script type="text/javascript" src="jquery-1.12.4.min.js"></script>
-	<script type="text/javascript" src="owl.carousel.js"></script>
+	<script type="text/javascript" src="owl.carousel.min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
 			$('.owl-carousel').owlCarousel({
@@ -97,6 +104,7 @@
 				loop:true,
 				nav:true,
 				navText:[],
+				dots: false,
 				margin:0,
 				responsive:{
 					790:{
@@ -115,14 +123,6 @@
 			});
 		});
 	</script>
-	<style>
-	.owl-item .item .item_content {
-		position: absolute;
-		top: 0;
-		width: 100%;
-		height: 100%;
-	}
-	</style>
 </body>
 
 </html>
